--- a/public/newsletter/index.html
+++ b/public/newsletter/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" href="/img/logo/icon.png" type="image/x-icon" />
+    <title>  Newsletter |  diesmo5</title>
+    
     <title>diesmo5</title>
 
     <link
@@ -24,7 +26,7 @@
   <body class="text-century">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="https://diesmo5.com">
+  <a class="navbar-brand" href="/">
     <img src="/img/logo/diesmo5-logo.png" width="110px" alt="">
   </a>
   <button
@@ -47,7 +49,7 @@
       <a class="nav-item nav-link" href="https://masterclass.diesmo5.com"
         >MasterClass</a
       >
-      <a class="nav-item nav-link" href="https://diesmo5.com/events">Events</a>
+      <a class="nav-item nav-link" href="/events">Events</a>
       <a class="nav-item nav-link" href="/newsletter">Newsletter</a>
     </div>
   </div>
